Forced vertical scrollbar to prevent "centering jumps" when going between pages

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 html {
+    overflow-y: scroll;
     background: url(../img/bgimg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
